# upwork-job-listing-scraper

./: .cursorignore  .gitignore  Dockerfile  Dockerfile.api  README.md  actor.json  api.env  docker-compose.api.yml  docker-compose.yml  env.example  go.mod  main.go  pyproject.toml  requirements.txt
.actor/: actor.json  input_schema.json
.github/: APIFY_SETUP.md
.github/workflows/: apify-deploy.yml
api-docs/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
api-docs/docs/: getting-started.md  overview.md  pricing.md  use-cases.md
api-docs/src/css/: custom.css
apify/upwork-job-scraper/: CHANGELOG.md  Dockerfile  FILTER_TEST_RESULTS.md  README.md  TEST_RESULTS.md  requirements.txt
frontend/: README.md  biome.json  env.example  package-lock.json  package.json
goapi/: create_api_key_examples.md  env.template  flat_structure_examples.md  go.mod  go.sum  main.go  migrate-to-flat-structure.go  sample_api_key_document.json  test-flat-structure.sh  update_api_keys_guide.md
goapi/docs/: docs.go  swagger.json  swagger.yaml
goapi/server/: apikey_service.go  filter.go  filter_test.go  joblist_filter.go  models.go  redis.go  search_expression.go  server.go  transform.go  types.go  upwork_url_parser.go  upwork_url_parser_test.go  util.go  validation.go
sqlite_data/: jobs.db
src/: __init__.py  __main__.py  firebase_provider.py  main.py  postgres_backend.py  realtimedb.py  rocksdb_backend.py  sqlite_backend.py
src/core/: __init__.py  extract_data.js  extraction_scripts.py  service.py
src/schemas/: __init__.py  input.py  url_parser.py
(+48 files in other folders)
